// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.extra: - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "areas.extra:",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "default",
      "size": undefined,
      "title": undefined,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bodyStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {
        "border": "5px solid blue",
      },
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "properties.bodyStyle: border: 5px solid blue",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "properties.bordered: false",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.headerStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {
        "border": "5px solid blue",
      },
      "hoverable": undefined,
      "id": "properties.headerStyle: border: 5px solid blue",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hoverable: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": true,
      "id": "properties.hoverable: true",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "properties.inner: true",
      "size": undefined,
      "title": "Card block",
      "type": "inner",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "properties.size: small",
      "size": "small",
      "title": "Card block small",
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": Object {},
      "hoverable": undefined,
      "id": "properties.title",
      "size": undefined,
      "title": "Card block",
      "type": null,
    },
    Object {},
  ],
]
`;
